# ghost-crab

./: Cargo.toml  LICENSE  README.md  config.json  diesel.toml  docker-compose.yml
.github/workflows/: build.yml  release.yml
abi/: RocketMinipoolManager.json  RocketVault.json
abis/etherfi/: TVLOracle.json
abis/stakewise/: EthVault.json
abis/swell/: swETH.json
ghost-crab/: CHANGELOG.md  Cargo.toml
ghost-crab-common/: CHANGELOG.md  Cargo.toml
ghost-crab-common/src/: config.rs
ghost-crab-macros/: CHANGELOG.md  Cargo.toml
ghost-crab-macros/src/: lib.rs
ghost-crab-postgres/: CHANGELOG.md  Cargo.toml
ghost-crab-postgres/src/: lib.rs
ghost-crab/src/: block_handler.rs  config.rs  event_handler.rs  handler.rs  indexer.rs  latest_block_manager.rs  lib.rs  prelude.rs  process_logs.rs  progress.rs  rate_limit.rs  server.rs
ghost-crab/src/cache/: cache.rs  cache_layer.rs  manager.rs  mod.rs  rpc_proxy.rs
ghost-crab/src/indexer/: cache.rs  error.rs  indexer.rs  mod.rs  monitoring.rs  progress_manager.rs  rpc_manager.rs  templates.rs
ghost-crab/src/layers/: cache_layer.rs  mod.rs
ghost-crab/src/logs/: mod.rs  progress.rs  prometheus.rs  server.rs
indexer-macros/: Cargo.toml
indexer-macros/src/: lib.rs
migrations/2024-06-01-092436_test/: down.sql  up.sql
migrations/2024-06-03-215014_use-text/: down.sql  up.sql
migrations/2024-06-07-233210_cache/: down.sql  up.sql
migrations/2024-06-10-202852_separate_tvl_tables/: down.sql  up.sql
migrations/2024-06-10-204924_add_tvl_tables/: down.sql  up.sql
migrations/2024-06-12-163839_add_swell/: down.sql  up.sql
src/: block_handler.rs  config.rs  db.rs  handler.rs  indexer.rs  lib.rs  main.rs  manager.rs  models.rs  prelude.rs  process_logs.rs  rocketpool.rs  rpc_cache.rs  schema.rs  server.rs
src/cache/: manager.rs  mod.rs  rpc_proxy.rs
src/handlers/: etherfi.rs  mod.rs  rocketpool.rs  stakewise.rs  swell.rs  utils.rs
