[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = [
    "contract",
    "provider-http",
    "rpc-types-eth",
] }
tokio = { version = "1.37.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
async-trait = "0.1.80"
bytes = "1.6.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.5", features = ["full"] }
blake3 = "1.5.1"
indexer-macros = { path = "./indexer-macros" }
serde = { version="1.0.203", features = ["derive"] }
serde_json = "1.0.117"
once_cell = "1.19.0"
