[package]
name = "ghost-crab-common"
description = "ghost-crab common"
version = "0.1.0"
edition = "2021"
license = "MIT"


[lib]
name = "ghost_crab_common"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
once_cell = "1.19.0"
