[lib]
name = "ghost_crab_macros"
proc-macro = true

[package]
name = "ghost-crab-macros"
description = "macros for ghost-crab"
version = "0.1.5"
edition = "2021"
license = "MIT"

[dependencies]
proc-macro2 = "1.0.85"
quote = "1.0.36"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
syn = { version = "2.0.66", features = ["full"] }
ghost-crab-common = { path = "../ghost-crab-common", version = "0.2.2" }
