[package]
name = "ghost-crab"
description = "ethereum indexer SDK 👻🦀"
version = "0.4.0"
edition = "2021"
license = "MIT"

[lib]
name = "ghost_crab"
path = "src/lib.rs"

[dependencies]
alloy = { version = "0.1.0", features = [
    "contract",
    "provider-http",
    "rpc-types-eth",
    "json-rpc",
] }
tokio = { version = "1.37.0", features = ["full"] }
dotenvy = "0.15"
async-trait = "0.1.80"
bytes = "1.6.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.5", features = ["full"] }
blake3 = "1.5.1"
ghost-crab-macros = { path = "../ghost-crab-macros", version = "0.1.3" }
ghost-crab-common = { path = "../ghost-crab-common", version = "0.2.0" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rocksdb = "0.22.0"
tower = "0.4.13"
